# cli-box

./: .gitignore  CLAUDE.md  Cargo.toml  DEBUG.md  README.md  README.zh-cn.md  pnpm-lock.yaml  release.sh  test.sh
.github/workflows/: ci.yml  release.yml
crates/cli-box-cli/: Cargo.toml  build.rs
crates/cli-box-cli/src/: client.rs  main.rs
crates/cli-box-core/: Cargo.toml  build.rs
crates/cli-box-core/src/: diff.rs  lib.rs  logging.rs  player.rs  recorder.rs
crates/cli-box-core/src/automation/: ax_ui.rs  keycodes.rs
crates/cli-box-core/src/capture/: mod.rs
crates/cli-box-core/src/daemon/: mod.rs
crates/cli-box-core/src/instance/: mod.rs
crates/cli-box-core/src/process/: mod.rs
crates/cli-box-core/src/sandbox/: mod.rs
crates/cli-box-core/src/server/: mod.rs
crates/cli-box-core/tests/: automation_integration.rs  capture_integration.rs  config_integration.rs  daemon_integration.rs  diff_test.rs  error_integration.rs  instance_integration.rs  process_integration.rs  pty_reader_test.rs  sandbox_integration.rs
crates/cli-box-daemon/: Cargo.toml
crates/cli-box-daemon/src/: main.rs
crates/sandbox-cli/: Cargo.toml
crates/sandbox-cli/src/: client.rs  main.rs  mcp_server.rs  server.rs
crates/sandbox-core/: Cargo.toml
crates/sandbox-core/src/: diff.rs  lib.rs  logging.rs  player.rs  pty_store.rs  recorder.rs  report.rs  scenario.rs
crates/sandbox-core/src/automation/: ax_ui.rs  cg_event.rs  keycodes.rs  mod.rs
crates/sandbox-core/src/capture/: mod.rs
crates/sandbox-core/src/daemon/: mod.rs
crates/sandbox-core/src/instance/: mod.rs
crates/sandbox-core/src/process/: mod.rs
crates/sandbox-core/src/sandbox/: mod.rs
crates/sandbox-core/src/server/: mod.rs
crates/sandbox-core/tests/: automation_integration.rs  capture_integration.rs  config_integration.rs  daemon_integration.rs  diff_integration.rs  diff_test.rs  error_integration.rs  instance_integration.rs  process_integration.rs  pty_reader_test.rs  recorder_integration.rs  sandbox_integration.rs  scenario_integration.rs
crates/sandbox-daemon/: Cargo.toml  build.rs
crates/sandbox-daemon/src/: main.rs
docs/design/: electron-rust-architecture.md  keyboard-ops.md  phase-8-fixes.md  phase-8-post-to-pid.md  rebuild-plan.md  release-pipeline.md
docs/guide/: installation.md
docs/question_analysis/: opencode-tui-blank-screen.md  xterm-wkwebview-write-stall.md
docs/study/: terminal-comparison.md
docs/superpowers/plans/: 2026-05-24-cli-pty-websocket.md  2026-05-24-deferred-pty-creation.md  2026-05-24-pty-output-replay.md  2026-05-24-pty-reader-thread.md  2026-05-24-pty-sqlite-persistence.md  2026-05-24-pty-websocket-streaming.md  2026-05-24-terminal-first-approach.md  2026-05-30-electron-rust-daemon.md  2026-05-30-electron-shell.md  2026-05-31-phase5-multi-instance.md  2026-05-31-phase7-integration.md  2026-05-31-phase8-bugfixes.md  2026-05-31-terminal-layout-fix.md  2026-06-01-close-confirmation-dialogs.md  2026-06-01-screenshot-with-frame.md  2026-06-03-release-pipeline-skill.md  2026-06-03-rename-sandbox-to-cli-box.md  2026-06-03-rename-to-cli-box.md  2026-06-03-screenshot-fallback-and-electron-reuse.md  2026-06-03-test-coverage-regression-guard.md  2026-06-04-e2e-skill-install-test.md  2026-06-05-screenshot-with-frame.md  2026-06-05-start-readiness-wait.md  2026-06-06-auto-input-routing.md  2026-06-06-screenshot-size-fix.md  2026-06-07-connection-recovery.md  2026-06-14-electron-daemon-polling.md
docs/superpowers/specs/: 2026-06-04-e2e-skill-install-test-design.md  2026-06-05-screenshot-e2e-tests-design.md  2026-06-06-auto-input-routing-design.md  2026-06-06-screenshot-size-fix-design.md  2026-06-07-connection-recovery-design.md  2026-06-14-electron-daemon-polling-design.md
docs/task/: README.md  phase-0-skeleton.md  phase-1-automation.md  phase-2-server.md  phase-3-ui-inspect.md  phase-4-advanced.md  phase-5-multi-instance.md  phase-6-gui-support.md  phase-7-integration.md  task_records.json
electron-app/: electron-builder.config.cjs  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
electron-app/e2e/: close-dialog.spec.ts  fixtures.ts  playwright.config.ts  screenshot-fallback.spec.ts  tab-creation.spec.ts  tab-screenshot.spec.ts  vite.renderer.config.ts
electron-app/src/__tests__/: captureToPng.test.ts  connectPty.test.ts  daemon-bridge.test.ts  polling.test.ts  screenshotWsReconnect.test.ts  tabManagement.test.ts
electron-app/src/__tests__/mocks/: websocket.ts  xterm.ts
electron-app/src/main/: daemon-bridge.ts  index.ts
electron-app/src/preload/: index.ts
electron-app/src/renderer/: api.ts  index.html  main.tsx  styles.css  tabState.ts
electron-app/src/renderer/components/: DaemonWaiting.tsx  ErrorModal.tsx  Terminal.tsx
release/: README.md
sandbox-web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vitest.config.ts
sandbox-web/src/: api.ts  index.css  logger.ts  main.tsx
sandbox-web/src/__tests__/: App.test.tsx  api.test.ts  components.test.tsx  setup.ts  terminal.test.tsx  theme-context.test.tsx  themes.test.ts
sandbox-web/src/components/: ControlPanel.tsx  Dashboard.tsx  DetailPanel.tsx  RecordControls.tsx  Sidebar.tsx  StatusBar.tsx  Terminal.tsx
sandbox-web/src/themes/: ThemeContext.tsx  registry.ts  tokyo-night.ts  types.ts  vscode-light.ts
skill/: README.md  SKILL.md  package.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests/: MANUAL_TEST_GUIDE.md  REPORT.md  e2e-screenshot-with-frame.sh  e2e-skill-install.sh  release_test.md
