[workspace]
resolver = "2"
members = [
    "crates/sandbox-core",
    "crates/sandbox-cli",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
image = "0.25"
nix = { version = "0.29", features = ["signal", "process"] }
portable-pty = "0.9"
axum = "0.8"
rmcp = { version = "1.7", features = ["server", "macros", "transport-io", "schemars"] }
tower = "0.5"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
sandbox-core = { path = "crates/sandbox-core" }
