[workspace]
resolver = "2"
members = [
    "crates/cli-box-core",
    "crates/cli-box-cli",
    "crates/cli-box-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = { version = "0.2", features = ["parking_lot"] }
base64 = "0.22"
image = "0.25"
nix = { version = "0.29", features = ["signal", "process"] }
portable-pty = "0.9"
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
cli-box-core = { path = "crates/cli-box-core" }
tokio-tungstenite = { version = "0.29", features = ["connect"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
dirs = "5"
