[package]
name = "system-test-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "macOS desktop automation sandbox (Tauri app)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sandbox-core = { workspace = true, features = ["screencapturekit"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
