[package]
name = "sandbox-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "macOS desktop automation sandbox CLI"

[[bin]]
name = "sandbox"
path = "src/main.rs"

[dependencies]
sandbox-core.workspace = true
tokio.workspace = true
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing.workspace = true
tracing-subscriber.workspace = true
