[package]
name = "sandbox-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "macOS desktop automation sandbox CLI"

[[bin]]
name = "sandbox"
path = "src/main.rs"

[dependencies]
sandbox-core = { workspace = true, features = ["screencapturekit"] }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
