[package]
name = "sandbox-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "macOS desktop automation sandbox core library"

[features]
default = ["screencapturekit"]
screencapturekit = ["dep:screencapturekit"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
base64.workspace = true
image.workspace = true
nix.workspace = true
portable-pty.workspace = true
serde_yaml.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.25", features = ["highsierra"] }
core-foundation = "0.10"
objc = "0.2"
screencapturekit = { version = "2.1", features = ["macos_14_0"], optional = true }
