[package]
name = "sandbox-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Sandbox daemon process — manages all sandbox instances"

[dependencies]
sandbox-core = { workspace = true, features = ["screencapturekit"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
